--- a/HillCipherKnownPlainTextAttack/HillCipherKnownPlainTextAttack.csproj
+++ b/HillCipherKnownPlainTextAttack/HillCipherKnownPlainTextAttack.csproj
@@ -77,7 +77,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HillCipherKnownPlainTextAttack.cs" />
+    <Compile Include="HillCipherKnownPlainTextAttackMapper.cs" />
     <Compile Include="HillCipherKnownPlainTextAttackSettings.cs" />
+    <Compile Include="HillCipherKnownPlainTextAttackUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +108,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="userdoc.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="HillCipherKnownPlainTextAttackMatrix.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
